# ha-sentinel

./: .gitignore  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt  ruff.toml
.github/: CODEOWNERS
.github/workflows/: hassfest.yaml  ruff.yaml  tests.yaml  validate.yaml
custom_components/ha_sentinel/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/ha_sentinel/providers/: __init__.py  devices.py  integrations.py
custom_components/ha_sentinel/translations/: en.json
custom_components/sentinel/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity_base.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/sentinel/providers/: apps.py  devices.py  integrations.py
custom_components/sentinel/translations/: en.json  fr.json
lovelace/: ha-sentinel-card.js  hacs.json
tests/: __init__.py  conftest.py  ruff.toml  test_apps_provider.py  test_binary_sensor_labels.py  test_config_flow.py  test_coordinator.py  test_devices_provider.py  test_devices_provider_async.py  test_init.py  test_integrations_provider.py  test_integrations_provider_async.py  test_subentry_flow.py
